Создана модель БД

--- a/MatrixResponsibility.Common/MatrixResponsibility.Common.csproj
+++ b/MatrixResponsibility.Common/MatrixResponsibility.Common.csproj
@@ -2,6 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+      <Nullable>enable</Nullable>
+      <LangVersion>latest</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+  </ItemGroup>
+    
 
 </Project>
