--- a/MatrixResponsibility/appsettings.json
+++ b/MatrixResponsibility/appsettings.json
@@ -1,9 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "JwtSettings": {
+        "Key": "YourSuperSecretKeyHere1234567890MustBeAtLeast32Chars", // Должен быть длинным и сложным (минимум 16 символов)
+        "Issuer": "MatrixResponsibility",
+        "Audience": "MatrixResponsibility.Client",
+        "ExpiryInDays": 60
+    },
+    "LDAPSettings": {
+        "Url": "http://ldapservice.olimproekt.ru/"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
