--- a/MatrixResponsibility.Common/MatrixResponsibility.Common.csproj
+++ b/MatrixResponsibility.Common/MatrixResponsibility.Common.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="olp.ControllerGenerator.Data" Version="1.5.0" />
   </ItemGroup>
     
 
