Добавлена базовая авторизация на клиенте.

--- a/MatrixResponsibility/appsettings.json
+++ b/MatrixResponsibility/appsettings.json
@@ -1,6 +1,6 @@
 {
     "JwtSettings": {
-        "Key": "YourSuperSecretKeyHere1234567890MustBeAtLeast32Chars", // Должен быть длинным и сложным (минимум 16 символов)
+        "Key": "{4487B8DC-992B-407B-B299-B3493AA7233C}", //минимум 16 символов
         "Issuer": "MatrixResponsibility",
         "Audience": "MatrixResponsibility.Client",
         "ExpiryInDays": 60
