--- a/MatrixResponsibility.Client/MatrixResponsibility.Client.csproj
+++ b/MatrixResponsibility.Client/MatrixResponsibility.Client.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="9.0.2" PrivateAssets="all" />
       <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="9.0.3" />
       <PackageReference Include="System.Net.Http.Json" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.3" />
