Создана страница Login

--- a/MatrixResponsibility.Client/MatrixResponsibility.Client.csproj
+++ b/MatrixResponsibility.Client/MatrixResponsibility.Client.csproj
@@ -12,6 +12,7 @@
       <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="9.0.3" />
+      <PackageReference Include="Radzen.Blazor" Version="6.2.8" />
       <PackageReference Include="System.Net.Http.Json" Version="9.0.3" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
       <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.3" />
