--- a/testdb.yml
+++ b/testdb.yml
@@ -8,6 +8,8 @@ services:
       POSTGRES_DB: matrix_db_test
     ports:
       - "5432:5432"
+    volumes:
+      - postgres_data_test:/var/lib/postgresql/data
 
   adminer:
     image: adminer
@@ -16,3 +18,6 @@ services:
         - db
     ports:
       - "8080:8080"
+  
+volumes:
+  postgres_data_test:
