--- a/MatrixResponsibility.Client/MatrixResponsibility.Client.csproj
+++ b/MatrixResponsibility.Client/MatrixResponsibility.Client.csproj
@@ -19,6 +19,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="9.0.3" />
       <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.6.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.1" />
+      <PackageReference Include="System.Text.Json" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
